@@ -205,6 +205,7 @@ static const decode_table_t oDecodeTable[] =
   { "REQUIRE8", DTABLE_CALLBACK_VOID, { .vd = c_require8 } }, /* REQUIRE8 {TRUE}/{FALSE} */
   { "RET", DTABLE_CALLBACK_VOID | DTABLE_PART_MNEMONIC, { .vd = m_ret } }, /* RET CC */
   { "RFC", DTABLE_CALLBACK_VOID | DTABLE_PART_MNEMONIC, { .vd = m_rfc } }, /* RFC CC */
+  { "RFE", DTABLE_CALLBACK_VOID | DTABLE_PART_MNEMONIC, { .vd = m_rfe } }, /* RFE MODE */
   { "RFS", DTABLE_CALLBACK_VOID | DTABLE_PART_MNEMONIC, { .vd = m_rfs } }, /* RFS CC */
   { "RMF", DTABLE_CALLBACK_VOID | DTABLE_PART_MNEMONIC, { .vd = m_rmf } }, /* RMF CC P R */
   { "RN", DTABLE_CALLBACK_SYMBOL, { .sym = c_rn } }, /* RN */
@@ -241,6 +242,7 @@ static const decode_table_t oDecodeTable[] =
   { "SMULWT", DTABLE_CALLBACK_VOID | DTABLE_PART_MNEMONIC, { .vd = m_smulwt } }, /* SMULWT CC */
   { "SPACE", DTABLE_CALLBACK_VOID, { .vd = c_reserve } }, /* % / SPACE : reserve space.  */
   { "SQT", DTABLE_CALLBACK_VOID | DTABLE_PART_MNEMONIC, { .vd = m_sqt } }, /* SQT CC P R */
+  { "SRS", DTABLE_CALLBACK_VOID | DTABLE_PART_MNEMONIC, { .vd = m_srs } }, /* SRS MODE */
   { "STACK", DTABLE_CALLBACK_VOID, { .vd = m_stack } }, /* STACK */
   { "STC", DTABLE_CALLBACK_VOID | DTABLE_PART_MNEMONIC, { .vd = m_stc } }, /* STC CC l */
   { "STC2", DTABLE_CALLBACK_VOID | DTABLE_PART_MNEMONIC, { .vd = m_stc2 } }, /* STC2 CC l */
