@@ -24,14 +24,6 @@
 
 #include <stdbool.h>
 
-#define ARM_MODE_USR	(0x10)
-#define ARM_MODE_FIQ	(0x11)
-#define ARM_MODE_IRQ	(0x12)
-#define ARM_MODE_SVC	(0x13)
-#define ARM_MODE_ABORT	(0x17)
-#define ARM_MODE_UNDEF	(0x1B)
-#define ARM_MODE_SYSTEM	(0x1F)
-
 bool m_adr (void);
 bool m_bkpt (void);
 bool m_blx (void);
@@ -50,7 +42,5 @@ bool m_wfi (void);
 bool m_yield (void);
 
 bool m_cps (void);
-
-bool IsValidARMMode (int armMode);
 
 #endif
