@@ -40,4 +40,7 @@ bool m_dmb (void);
 bool m_dsb (void);
 bool m_isb (void);
 
+bool m_rfe (void);
+bool m_srs (void);
+
 #endif
